--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     </section>
 
     <section class="cards">
-      <a class="card" href="#">Tipos Pokémon</a>
+      <a class="card" href="tipos.html">Tipos Pokémon</a>
       <a class="card" href="#">Pokédex Interactiva</a>
       <a class="card" href="#">Constructor de Equipo</a>
       <a class="card" href="#">Simulador de Batalla</a>
