Avanzamos a pasos agigantados

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
     <section class="cards">
       <a class="card" href="tipos.html">Tipos Pokémon</a>
-      <a class="card" href="#">Pokédex Interactiva</a>
+      <a class="card" href="pokedex.html">Pokédex Interactiva</a>
       <a class="card" href="#">Constructor de Equipo</a>
       <a class="card" href="#">Simulador de Batalla</a>
       <a class="card" href="#">Quiz & Tests</a>
