--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <section class="cards">
       <a class="card" href="tipos.html">Tipos Pokémon</a>
       <a class="card" href="pokedex.html">Pokédex Interactiva</a>
-      <a class="card" href="#">Constructor de Equipo</a>
+      <a class="card" href="equipo.html">Constructor de Equipo</a>
       <a class="card" href="#">Simulador de Batalla</a>
       <a class="card" href="#">Quiz & Tests</a>
       <a class="card" href="#">Acerca de / Contacto</a>
