Constructor de Equipos

--- a/equipo.html
+++ b/equipo.html
@@ -36,6 +36,15 @@
 <div id="chartContainer">
   <canvas id="grafico"></canvas>
 </div>
+<div id="analisis" class="analisis-container">
+    <h2>📊 Análisis de Fortalezas y Debilidades</h2>
+    <p><strong>Fortalezas:</strong> <span id="fortalezas">Calculando...</span></p>
+    <p><strong>Debilidades:</strong> <span id="debilidades">Calculando...</span></p>
+  </div>
+  <div id="sugerencias" class="analisis-container">
+    <h2>💡 Sugerencias de Pokémon</h2>
+    <div id="sugerencias-lista">Cargando...</div>
+  </div>
 <script src="equipo.js"></script>  
 </body>
 </html>
