--- a/html/equipo.html
+++ b/html/equipo.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Constructor de Equipo</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
   <main class="constructor-container">
@@ -45,6 +45,6 @@
     <h2>💡 Sugerencias de Pokémon</h2>
     <div id="sugerencias-lista">Cargando...</div>
   </div>
-<script src="equipo.js"></script>  
+  <script src="../js/equipo.js"></script>  
 </body>
 </html>
