--- a/html/pokedex.html
+++ b/html/pokedex.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Pokédex Interactiva</title>
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="../css/style.css" />
 </head>
 <body>
     <main class="contenedor-pokedex">
@@ -40,6 +40,6 @@
           </details>
         </div>
       </main>      
-      <script src="pokedex.js"></script>
+      <script src="../js/pokedex.js"></script>
 </body>
 </html>
