--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Astro 7.7</title>
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="css/style.css" />
   <link rel="icon" href="assets/logo.png" type="image/png">
   <script src="libs/tsparticles.min.js"></script>
 </head>
@@ -19,16 +19,16 @@
     </section>
 
     <section class="cards">
-      <a class="card" href="tipos.html">Tipos Pokémon</a>
-      <a class="card" href="pokedex.html">Pokédex Interactiva</a>
-      <a class="card" href="equipo.html">Constructor de Equipo</a>
+      <a class="card" href="html/tipos.html">Tipos Pokémon</a>
+      <a class="card" href="html/pokedex.html">Pokédex Interactiva</a>
+      <a class="card" href="html/equipo.html">Constructor de Equipo</a>
       <a class="card" href="#">Simulador de Batalla</a>
       <a class="card" href="#">Quiz & Tests</a>
       <a class="card" href="#">Acerca de / Contacto</a>
     </section>
   </main>
 
-  <script src="script.js"></script>
+  <script src="js/script.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/tsparticles@3.1.0/tsparticles.bundle.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/tsparticles-preset-links@3.1.0/tsparticles.preset.links.bundle.min.js"></script>
 
