--- a/html/equipo.html
+++ b/html/equipo.html
@@ -28,6 +28,7 @@
         <div class="slot">4</div>
         <div class="slot">5</div>
         <div class="slot">6</div>
+        <button id="ir-a-batalla" style="display: none;">🚀 Ir a Batalla</button>
       </div>
     </section>
   </main>
