--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
       <a class="card" href="html/tipos.html">Tipos Pokémon</a>
       <a class="card" href="html/pokedex.html">Pokédex Interactiva</a>
       <a class="card" href="html/equipo.html">Constructor de Equipo</a>
-      <a class="card" href="#">Simulador de Batalla</a>
+      <a class="card" href="html/batalla.html">Simulador de Batalla</a>
       <a class="card" href="#">Quiz & Tests</a>
-      <a class="card" href="#">Acerca de / Contacto</a>
+      <a class="card" href="html/nosotros.html">Sobre el Proyecto</a>
     </section>
   </main>
 
