--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <a class="card" href="html/pokedex.html">Pokédex Interactiva</a>
       <a class="card" href="html/equipo.html">Constructor de Equipo</a>
       <a class="card" href="html/batalla.html">Simulador de Batalla</a>
-      <a class="card" href="#">Quiz & Tests</a>
+      <a class="card" href="html/quiz.html">Quiz & Tests</a>
       <a class="card" href="html/nosotros.html">Sobre el Proyecto</a>
     </section>
   </main>
